tests/golden/fixtures/syntax-func-contract-output-mismatch/expected.err
Error: call to 'produce' has mismatched output contract
   ╭─[ tests/golden/fixtures/syntax-func-contract-output-mismatch/input.k65:6:5 ]
   │
 6 │     produce
   │     ───┬───  
   │        ╰───── here
   │ 
   │ Help: call it as `produce() -> a`
───╯
